Page MenuHome GnuPG

Kleopatra: Unexpected keyboard navigation in Configure
Testing, NormalPublic

Description

Keyboard navigation in the Configure dialog is wrong/unexpected:

  • Enter: Pressing enter in search field closes the dialog
    1. Open Configure Dialog
      • Search field is focused
    2. Type something into the search field and press enter
      • Configure dialog is closed as the "OK" button was selected
      • Expected: focus on first field in the main panel
  • Tab: You need to tab through all buttons to reach the icon menu and then the main panel. Also the last field in the main panel should tab to the OK button and not to the search field.
    1. Open Configure Dialog
      • Search field is focused
    2. Press tab
      • Button "Defaults" is focused
      • Expected: Selected Menu item of the vertical icon menu (to be able to change the menu item fastly)
    3. Press shift+tab twice
      • Last field in main panel is focused
      • Expected: OK button

Details

Version
gpg4win-5.0.0-beta395 @ win11

Event Timeline

timegrid created this object with edit policy "Contributor (Project)".

The problem with Enter has been fixed upstream. I have added a patch with this fix.

ebo triaged this task as Normal priority.Nov 6 2025, 4:03 PM
ebo added a project: a11y.
ikloecker mentioned this in Unknown Object (Maniphest Task).Nov 10 2025, 9:01 AM
ikloecker changed the task status from Open to Testing.Wed, Nov 12, 4:44 PM
ikloecker claimed this task.
ikloecker moved this task from Backlog to WIP on the gpd5x board.

The second problem with the wrong tab order is also fixed.

ikloecker mentioned this in Unknown Object (Maniphest Task).Mon, Nov 17, 9:01 AM

Looks good to me on gpg4win-5.0.0-beta413 @ win11.

On search enter I'd prefer a jump to the first match in main panel, but it's fine as it is now.