Fix tab order in configuration dialog

Create the buttons after adding the pages.

GnuPG-bug-id: 7879